No spaces in folder names

--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -46,7 +46,8 @@ rPath <- file.path( "..", "DataSummaries", regName, .Platform$file.sep )
 # Load the R image
 load( file=file.path(rPath, paste("Image", regName, "RData", sep=".")) )
 # Set the path to the region-specific documents for LaTeX
-docPath <- file.path( max(yrRange), regName, .Platform$file.sep )
+docPath <- file.path( "RegionalText", max(yrRange), regName,
+  .Platform$file.sep )
 @
 
 % Load R variables, switches, etc
