Minor edits to regional texts

--- a/RegionalText/2019/CC/DataCollectionPrograms.tex
+++ b/RegionalText/2019/CC/DataCollectionPrograms.tex
@@ -1,5 +1,4 @@
-The data collection program in the Central Coast reﬂected a number of collaborations
-between DFO, the Heiltsuk Nation, and the Herring Industry.
+The data collection program in the Central Coast reﬂected a number of collaborations between DFO, the Heiltsuk Nation, and the Herring Industry.
 Biological samples were collected by the seine test charter vessel ``Windward Isle'' for 22 days from March \nth{19}
 to April \nth{9}.
 The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring in Statistical Areas 06, 07, and 08, identiﬁed from soundings.
