--- a/RegionalText/2019/CC/GeneralObservations.tex
+++ b/RegionalText/2019/CC/GeneralObservations.tex
@@ -9,13 +9,13 @@
 % \item Kwakhume Inlet concerning to some due to lack of stock (stocks small).
 % General observations about spawns:
 \item Spawns seemed to start quickly; no schooling or holding observed.
-\item Spawn was of shorter duration than usual.
+% \item Spawn was of shorter duration than usual.
 % Observations about fish size (Test Boat comments):
 \item The test boat encoutered many small fish which appear to be predominantly 2 and 3 years old.
 % \item Encountered large numbers of juveniles in a set between near Cockle Bay (set was exclusively juveniles).
 % General Comments:
 \item The number of sea lions and squid increased since last year.
 % Thompson:
-\item (MT) Compared to last year, spawning was extensive, and over a longer time period and areas.
-\item (MT) Kynoch Inlet and Culpepper Lagoon saw extensive spawning this season.
+\item Compared to last year, spawning was extensive (i.e., over a longer time period and area).
+\item Kynoch Inlet and Culpepper Lagoon saw extensive spawning this season.
 \end{itemize}
