--- a/RegionalText/2019/HG/DataCollectionPrograms.tex
+++ b/RegionalText/2019/HG/DataCollectionPrograms.tex
@@ -1,7 +1,7 @@
 In 2019, biological samples were collected by the ``Queens Reach'', a seine test charter vessel funded by DFO.
 The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring from Haida Gwaii major (priority) and minor stock areas, identiﬁed from soundings.
-The ``Queens Reach'' operated a 25 day charter from March \nth{9} to April \nth{2}, collecting samples from HG and Area 2W.
+The ``Queens Reach'' operated a 25 day charter from March \nth{9} to April \nth{2}, collecting samples from HG and Area 2 West.
 The spawn reconnaissance vessel ``Victoria Rose'' operated a 19 day charter from March \nth{31} to April \nth{18}.
 The dive charter vessel ``Haida Spirit'' operated an 18 day charter from April \nth{3} to April \nth{20}.
-These vessels were funded by DFO, through a contract to the HCRS.
+These vessels were funded by DFO, through a contract to HCRS.
 The dive survey contract was awarded to and operated by the Haida Nation.
