--- a/RegionalText/2019/PRD/GeneralObservations.tex
+++ b/RegionalText/2019/PRD/GeneralObservations.tex
@@ -1,19 +1,16 @@
 \begin{itemize}
-
-\item Water temperature was recorded at 6 degrees
+% \item Water temperature was recorded at 6 degrees
 \item With the cooling temperatures herring appear to be settling back to traditional holding patterns and spawn timing. 
 \item Hatch out time outside of Tree Bluff (10 days) was recorded to be shorter in comparison to Kitkatla timing. 
-\item Herring were observed to be smaller overall during sampling gradually increasing in size in the Duncan bay/Tugwell Island area. 
-\item Overall length of spawn (approximately 34 km) was better than average and was continuous compared to the spot spawning observed for 2018. 
-\item However the intensity of the spawn was still weak compared to past years. 
-\item Spawn was recorded North end of Porcher and Hudson's Bay Passage south of Dundas Island.
+\item Herring were observed to be smaller overall during sampling, and gradually increasing in size in the Duncan bay/Tugwell Island area. 
+\item Overall length of spawn was longer than previous years and was continuous compared to the spot spawning observed in 2018. 
+\item The spawn was less intense compared to previous years.
+\item Spawn was recorded at the North end of Porcher Island and Hudson's Bay Passage south of Dundas Island.
 \item Nothing observed in Butler's Cove. 
 \item Spawn was observed in Venn Passage outside of Metlakatla. 
-
 % Thompson
 \item The egg hatch out time was back to normal (2 to 3 weeks), as opposed to 10 days seen with warmer sea surface temperatures.
-\item The sea lion population appeared to be increased from recent years.
+\item The sea lion population seems to have increased compared to the past few years.
 \item Large extensive spawn throughout Kitkatla with spawns out around Cape George and Oona River.
-\item Increase of spawn length compared to previous years.
-
+% \item Increase of spawn length compared to previous years.
 \end{itemize}
