--- a/RegionalText/2019/WCVI/DataCollectionPrograms.tex
+++ b/RegionalText/2019/WCVI/DataCollectionPrograms.tex
@@ -2,7 +2,7 @@ Biological samples were collected by the seine charter vessel ``Proud Canadian''
 The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring from Areas 23, 24, and 25.
 Nearshore herring samples were collected by the Nuu-chah-nulth staff in Areas 23, 24, and 25 as part of a pilot sampling program and on-going collaboration between WCVI First Nations and DFO.
 These nearshore biological samples were collected from spawning aggregations using cast nets.
-WCVI First Nations spawn reconnaissance charters reported spawn activity in all 3 Areas, and conducted spawn surveys using surface survey methods in Hesquiat Harbour (Area 24).
+WCVI First Nations spawn reconnaissance charters reported spawn activity in all 3 areas, and conducted spawn surveys using surface survey methods in Hesquiat Harbour (Area 24).
 
 Herring spawn locations were primarily identiﬁed with ﬁxed-wing overﬂights conducted by DFO Resource Management Area staff.
 Ten ﬂights were conducted this season from February through March.
@@ -13,4 +13,4 @@ Two dive charter vessels operated on the WCVI:
 \item The ``Pachena No.1'' surveyed 17 days from March \nth{2} to March \nth{18}, mainly in Areas 24 and 25.
 \item The ``Seaveyor'' surveyed 13 days from March \nth{11} to April \nth{11}.
 \end{itemize}
-The seine test charter vessel and the dive survey vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
+The seine test charter vessel and the dive survey vessels were funded by DFO, through a contract to HCRS.
