--- a/RegionalText/2019/WCVI/GeneralObservations.tex
+++ b/RegionalText/2019/WCVI/GeneralObservations.tex
@@ -1,6 +1,6 @@
 \begin{itemize}
-\item Compared to last year, the spatial extent of reported spawn about the same.
-\item In Area 23, spawning activity was reported in the usual areas from Salmon Beach to Toquart Bay, with spawn also heading into the south side of Ucluelet.
-\item In Area 24, multiple spawns occurred from January through to March with the majority occurring in Hesquiaht Harbour.
-\item In Area 25, same as last year there was a noticeable increase in spawning activity in Nootka Sound, and multiple spawns around the Nuchatlitz islands.
+\item Compared to last year, the spatial extent of reported spawn was about the same.
+\item In Area 23, spawning activity was reported in the usual areas from Salmon Beach to Toquart Bay, with spawn also along the south side of Ucluelet.
+\item In Area 24, multiple spawns occurred from January to March, with the majority occurring in Hesquiaht Harbour.
+\item As with last year in Area 25, there was a noticeable increase in spawning activity in Nootka Sound, and multiple spawns around the Nuchatlitz islands.
 \end{itemize}
