Minor edits to regional texts

--- a/RegionalText/2019/A2W/DataCollectionPrograms.tex
+++ b/RegionalText/2019/A2W/DataCollectionPrograms.tex
@@ -1,4 +1,4 @@
 In 2019, biological samples were collected by the ``Queens Reach'', a seine test charter vessel funded by DFO.
-The ``Queens Reach'' collected biological samples from main bodies of herring, identiﬁed from soundings.
+The ``Queens Reach'' collected biological samples from main bodies of herring, identified from soundings.
 The ``Atlas'' operated a 6 day surface survey in Area 2 West, from March \nth{31} to April \nth{5}.
-Both vessels were funded by DFO, through a contract to HCRS.
+Both vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
