--- a/RegionalText/2019/CC/DataCollectionPrograms.tex
+++ b/RegionalText/2019/CC/DataCollectionPrograms.tex
@@ -1,10 +1,10 @@
-The data collection program in the Central Coast reﬂected a number of collaborations between DFO, the Heiltsuk Nation, and the Herring Industry.
+The data collection program in the Central Coast reflected a number of collaborations between DFO, the Heiltsuk Nation, and the Herring Industry.
 Biological samples were collected by the seine test charter vessel ``Windward Isle'' for 22 days from March \nth{19}
 to April \nth{9}.
-The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring in Statistical Areas 06, 07, and 08, identiﬁed from soundings.
+The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring in Statistical Areas 06, 07, and 08, identified from soundings.
 
-Herring spawn locations were primarily identiﬁed with ﬁxed-wing overflights conducted by DFO Resource Management Area staff.
-Six ﬂights were conducted this season, between March and April.
+Herring spawn locations were primarily identified with fixed-wing overflights conducted by DFO Resource Management Area staff.
+Six flights were conducted this season, between March and April.
 Three dive charter vessels operated in the CC:
 \begin{itemize}
 \item The ``Pachena No.1'' surveyed 17 days from April \nth{2} to April \nth{18},
@@ -12,4 +12,4 @@ Three dive charter vessels operated in the CC:
 \item The Kitasoo First Nations surveyed 5 days from April \nth{1} to April \nth{5}.
 \end{itemize}
 Three gillnet sounding vessels were operating by the Heiltsuk Nation this season:
-two primarily in Area 07, and one primarily in Area 08 to assist in locating fish for spawn on kelp (SOK) operations.
+two primarily in Statistical Area 07, and one primarily in Statistical Area 08 to assist in locating fish for spawn on kelp (SOK) operations.
