--- a/RegionalText/2019/PRD/DataCollectionPrograms.tex
+++ b/RegionalText/2019/PRD/DataCollectionPrograms.tex
@@ -3,10 +3,10 @@ In 2019, biological samples were collected by two seine test vessels:
 \item The ``Nita Maria'' collected samples in Big Bay for 13 days from March \nth{16} to March \nth{28}.
 \item The ``Franciscan No.1'' collected samples in Kitkatla for 13 days from March \nth{15} to March \nth{29}.
 \end{itemize}
-The primary purpose of the test charter vessels was to collect biological samples from main bodies of herring from Big Bay and Kitkatla, identiﬁed from soundings.
+The primary purpose of the test charter vessels was to collect biological samples from main bodies of herring from Big Bay and Kitkatla, identified from soundings.
 Both vessels were also used as management platforms: ``Franciscan No.1'' in Kitkatla, and ``Nita Maria'' in Big Bay. 
-Herring spawn locations were primarily identiﬁed using a drone in Area 4 conducted by DFO Resource Management Area staff.
-Spawn in Area 5 was primarily identified by DFO Resource Management Area staff aboard the ``Franciscan No.1.''
+Herring spawn locations were primarily identified using a drone in Statistical Area 4 conducted by DFO Resource Management Area staff.
+Spawn in Statistical Area 5 was primarily identified by DFO Resource Management Area staff aboard the ``Franciscan No.1.''
 One overflight was conducted in early April.
 The dive charter vessel ``Royal Pride'' operated a 20-day charter from March \nth{28} to April \nth{16}, surveying spawn throughout the stock area.
-All three charter vessels were funded by DFO, through a contract to HCRS.
+All three charter vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
