--- a/RegionalText/2019/SoG/GeneralObservations.tex
+++ b/RegionalText/2019/SoG/GeneralObservations.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
-\item The spawn deposited between along the West side of Denman Island was the majority of biomass this year for the Strait of Georgia.
-\item As in recent years, there was a lack of spawn observed in Area 17 South.
+\item The majority of spawn in SoG was along the West side of Denman Island this year.
+\item As in recent years, there was a lack of spawn observed in Statistical Area 17 South.
 \item Lack of spawn deposition in some common locations like Qualicum beach to Columbia beach on Vancouver Island.
 \end{itemize}
