--- a/RegionalText/2019/A27/GeneralObservations.tex
+++ b/RegionalText/2019/A27/GeneralObservations.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
 % Thompson
-\item Area 27 had the shortest reported spawn length of the Statistical Areas on the West Coast of Vancouver Island.
+\item Statistical Area 27 had the shortest reported spawn length of the Statistical Areas on the West Coast of Vancouver Island.
 \item All surveyed eggs from the spawn were dead.
 \end{itemize}
