Update regional texts

--- a/RegionalText/2019/A2W/GeneralObservations.tex
+++ b/RegionalText/2019/A2W/GeneralObservations.tex
@@ -1,4 +1,7 @@
 \begin{itemize}
 \item Historically normal spawning throughout the common locations.
+\item Test charter observed $\sim 5,000$ tons of Herring in Port Louise.
+\item Spawn surveys were only completed for Port Louis and Port Channal using surface survey methods.
+\item Herring spawn in Port Louis was primarily on outer exposed shore and into Ottard Bay.
 \item Many layers of eggs in Otard Bay ($\geq 10$ layers).
 \end{itemize}
