--- a/RegionalText/2019/CC/DataCollectionPrograms.tex
+++ b/RegionalText/2019/CC/DataCollectionPrograms.tex
@@ -2,6 +2,8 @@ The data collection program in the Central Coast reflected a number of collabora
 Biological samples were collected by the seine test charter vessel ``Windward Isle'' for 22 days from March \nth{19}
 to April \nth{9}.
 The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring in Statistical Areas 06, 07, and 08, identified from soundings.
+Nearshore herring samples were collected by Heiltsuk and Kitasoo staff as part of a pilot sampling program and on-going collaboration between CC First Nations and DFO.
+These nearshore biological samples were collected from spawning aggregations using cast nets.
 
 Herring spawn locations were primarily identified with fixed-wing overflights conducted by DFO Resource Management Area staff.
 Six flights were conducted this season, between March and April.
