--- a/RegionalText/2019/CC/GeneralObservations.tex
+++ b/RegionalText/2019/CC/GeneralObservations.tex
@@ -1,21 +1,10 @@
 \begin{itemize}
-% Flight comments:
-% \item Good flying conditions, clear and sunny.
-% \item Few signs of wildlife, birds for most of the season other than active spawn.
-% \item Spawn mostly done by end of March.
-\item Most major spawn locations finished by end of March; only a few isolated spawns reported in April.
-% Impression of the stock status:
-% \item Stronger than last year, spawns in additional areas that had no spawn last year.
-% \item Kwakhume Inlet concerning to some due to lack of stock (stocks small).
-% General observations about spawns:
+\item The test boat encountered many small fish which appear to be predominantly 2 and 3 years old.
+\item The test boat caught a set that was exclussivelt juvenile fish near Cockle Bay.
 \item Spawns seemed to start quickly; no schooling or holding observed.
-% \item Spawn was of shorter duration than usual.
-% Observations about fish size (Test Boat comments):
-\item The test boat encoutered many small fish which appear to be predominantly 2 and 3 years old.
-% \item Encountered large numbers of juveniles in a set between near Cockle Bay (set was exclusively juveniles).
-% General Comments:
-\item The number of sea lions and squid increased since last year.
-% Thompson:
+\item Most major spawn locations finished by end of March; only a few isolated spawns reported in April.
+\item Spawning biomass appeared to be stronger than last year, with some spawns in areas that had no spawn last year.
 \item Compared to last year, spawning was extensive (i.e., over a longer time period and area).
-\item Kynoch Inlet and Culpepper Lagoon saw extensive spawning this season.
+\item Kynoch Inlet and Culpepper Lagoon saw extensive spawning this season, however, no spawns were reported in Kwakhume Inlet.
+\item The number of sea lions and squid increased since last year.
 \end{itemize}
