--- a/RegionalText/2019/HG/GeneralObservations.tex
+++ b/RegionalText/2019/HG/GeneralObservations.tex
@@ -1,4 +1,10 @@
 \begin{itemize}
+\item Test charter soundings were similar to last year ($16,000$ tons).
+\item Majority of spawning occurred between March \nth{30} and April \nth{10}.
+\item Biomass was concentrated around Burnaby Island.
+\item Significant spawn was observed north of Louise Narrows in Carmichael Passage.
 \item Increase in spawn length with increase in the number of spawn locations compared to last year.
 \item Increase in surface surveys to cover off locations where the spawn survey was unable to access.
+\item Dive survey only surveyed alternate transects to complete survey across the region.
+\item Spawns in Louscoone were not surveyed.
 \end{itemize}
