--- a/RegionalText/2019/PRD/GeneralObservations.tex
+++ b/RegionalText/2019/PRD/GeneralObservations.tex
@@ -1,5 +1,4 @@
 \begin{itemize}
-% \item Water temperature was recorded at 6 degrees
 \item With the cooling temperatures herring appear to be settling back to traditional holding patterns and spawn timing. 
 \item Hatch out time outside of Tree Bluff (10 days) was recorded to be shorter in comparison to Kitkatla timing. 
 \item Herring were observed to be smaller overall during sampling, and gradually increasing in size in the Duncan bay/Tugwell Island area. 
@@ -8,9 +7,17 @@
 \item Spawn was recorded at the North end of Porcher Island and Hudson's Bay Passage south of Dundas Island.
 \item Nothing observed in Butler's Cove. 
 \item Spawn was observed in Venn Passage outside of Metlakatla. 
-% Thompson
 \item The egg hatch out time was back to normal (2 to 3 weeks), as opposed to 10 days seen with warmer sea surface temperatures.
 \item The sea lion population seems to have increased compared to the past few years.
 \item Large extensive spawn throughout Kitkatla with spawns out around Cape George and Oona River.
+\item Sea surface temperatures at Kitkatla were $\sim9^\circ\text{C}$.
+\item Herring appeared to be holding in the typical pattern in the Big Bay area with moderate spawn. 
+\item Herring spawn was concentrated around Dries Inlet in Kitkatla Inlet, and occurred continuously for over a week. 
+\item A significant spawn event occurred on the outside of Kitkatla Inlet outside of Freeman Pass From Cape George to Joachim Point. 
+\item Reports of moderate spawn at Banks Island and Willis Bay prior to the test fishery. 
+\item Spawn occurred within similar timing windows in both Big Bay and Kitkatla. 
+\item The egg hatch out time was relatively normal (2 to 3 weeks), although Big Bay hatch out occurred on a slightly earlier time frame (2 weeks) as opposed Kitkatla (3 weeks).
+\item Soundings and observed spawn indicate a larger than usual body of fish in Kitkatla Inlet. 
+\item Test sets in Kitkatla indicated that a first wave of fish were present at the beginning of the test charter; a second wave of fish appeared to be moving in at the end of the test charter operations, with a mix of juveniles and spawned out fish appearing in the sets. 
 % \item Increase of spawn length compared to previous years.
 \end{itemize}
