--- a/RegionalText/2019/WCVI/DataCollectionPrograms.tex
+++ b/RegionalText/2019/WCVI/DataCollectionPrograms.tex
@@ -1,6 +1,6 @@
 Biological samples were collected by the seine charter vessel ``Proud Canadian'' for 20 days from February \nth{20} to March \nth{11}.
 The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring from Statistical Areas 23, 24, and 25.
-Nearshore herring samples were collected by the Nuu-chah-nulth staff in Statistical Areas 23, 24, and 25 as part of a pilot sampling program and on-going collaboration between WCVI First Nations and DFO.
+Nearshore herring samples were collected by the Nuu-chah-nulth staff as part of a pilot sampling program and on-going collaboration between WCVI First Nations and DFO.
 These nearshore biological samples were collected from spawning aggregations using cast nets.
 WCVI First Nations spawn reconnaissance charters reported spawn activity in all 3 areas, and conducted spawn surveys using surface survey methods in Hesquiat Harbour (Statistical Area 24).
 
@@ -10,7 +10,7 @@ Satellite imagery was purchased for five weeks from end of February to the end o
 These images were analyzed for the presence of spawn that may not have been seen by the flight program. 
 Two dive charter vessels operated on the WCVI:
 \begin{itemize}
-\item The ``Pachena No.1'' surveyed 17 days from March \nth{2} to March \nth{18}, mainly in Statistical Areas 24 and 25.
+\item The ``Pachena No.1'' surveyed 17 days from March \nth{2} to March \nth{18}, mainly in Statistical Areas 24 and 25, and
 \item The ``Seaveyor'' surveyed 13 days from March \nth{11} to April \nth{11}.
 \end{itemize}
 The seine test charter vessel and the dive survey vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
