--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -40,7 +40,7 @@
 # Load packages
 require( knitr, quietly=TRUE )  # Dynamic documents
 # Select region(s)/folder(s): major (HG, PRD, CC, SoG, WCVI); or minor (A27, A2W)
-if( !exists('regName') )  regName <- "A2W"
+if( !exists('regName') )  regName <- "CC"
 # Set the path to the R output, including a trailing separator
 rPath <- file.path( "..", "DataSummaries", regName, .Platform$file.sep )
 # Load the R image
@@ -144,7 +144,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \clearpage
 \section{Tables}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{\fishName{} stock assessment regions (SARs) in British Columbia.} 
 \begin{tabular}{lll}
@@ -176,7 +176,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \end{longtable}
 \FloatBarrier
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Total landed commercial catch of \fishName{} in metric tonnes (t) by gear type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
 \legendGear{}
@@ -189,7 +189,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \label{tabCatchCommUseYr}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Total harvested \fishName{} spawn on kelp (SOK) in pounds (lb), and the associated estimate of spawning biomass in metric tonnes (t) from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
 \spawnIndexTechReport{}
@@ -202,7 +202,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \label{tabHarvestSOK}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Number of \fishName{} biological samples processed from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
 \sampleSize{}} 
@@ -215,7 +215,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \label{tabBioNum}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Number and type of \fishName{} biological samples processed in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \sampleSize{}} 
@@ -227,7 +227,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \end{table}
 
 \iftoggle{numPropWtAge}{
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Observed number-at-age of \fishName{} by sample type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
@@ -241,7 +241,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \label{tabDeltaNumAgeYr}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Observed proportion-at-age of \fishName{} by sample type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
@@ -255,7 +255,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \label{tabDeltaPropAgeYr}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Observed mean weight-at-age in grams (g) of \fishName{} by sample type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
@@ -269,7 +269,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \label{tabDeltaWtAgeYr}
 \end{table}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Observed mean length-at-age in millimetres (mm) of \fishName{} by sample type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
@@ -284,7 +284,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \end{table}
 }{\unskip}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Observed proportion-at-age for \fishName{} from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}} 
@@ -298,7 +298,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \end{table}
 
 \iftoggle{weightGroup}{
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Sample size for \fishName{} weight-at-age analysis in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR) by Group from the most recent decade (\Sexpr{wtAgeYrRanges$recent}), and the previous decade (\Sexpr{wtAgeYrRanges$previous}), as displayed in \autoref{figWeightAgeGroup}. 
 \seineSamples{}
@@ -339,7 +339,7 @@ The following observations were reported by area DFO Resource Management staff, 
 \FloatBarrier
 }{\unskip}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centerfloat
 \caption{Summary of \fishName{} spawn survey data from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \qPeriods{}
@@ -356,7 +356,7 @@ Units: metres (m), and metric tonnes (t).}
 \clearpage
 \section{Figures}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{BC.pdf}
 \caption{Boundaries for the \fishName{} stock assessment regions (SARs) in British Columbia: there are \Sexpr{length(allRegions$major)} major SARs (\Sexpr{PasteNicely(allRegions$major)}), and \Sexpr{length(allRegions$minor)} minor SARs (\Sexpr{PasteNicely(allRegions$minor)}; \autoref{tabRegions}).
@@ -364,7 +364,7 @@ Units: kilometres (km).}
 \label{figBC}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{Region.pdf}
 \caption{Boundaries for the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), associated Statistical Areas (SA; thin solid lines), and associated Sections (thin dotted lines).
@@ -373,7 +373,7 @@ Units: kilometres (km).
 \label{figRegion}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{CatchGear.pdf}
 \caption{Time series of total landed catch in thousands of metric tonnes ($\text{t} \times 10^{3}$) of \fishName{} by gear type from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
@@ -383,7 +383,7 @@ Units: kilometres (km).
 \end{figure}
 
 \iftoggle{catchStatArea}{
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{CatchStatArea.pdf}
 \caption{Time series of total landed catch in thousands of metric tonnes ($\text{t} \times 10^{3}$) of \fishName{} by Statistical Area (SA) from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
@@ -393,7 +393,7 @@ Units: kilometres (km).
 }{\unskip}
 
 \iftoggle{biosamples}{
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{BioLocations.pdf}
 \caption{Location and type of \fishName{} biological samples collected in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
@@ -403,7 +403,7 @@ Units: kilometres (km).}
 }{\unskip}
 
 \iftoggle{weightCatch}{
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{WeightCatch.pdf}
 \caption{Time series of weight in grams (g) of \fishName{} by sample type from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR) in Statistical Areas 14 and 17.
@@ -416,7 +416,7 @@ Horizontal dashed lines indicate the mean weight-at-age for age-\Sexpr{min(ageRa
 \end{figure}
 }{\unskip}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{ProportionAged.pdf}
 \caption{Time series of observed proportion-at-age (a) and number aged in thousands (c) of \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
@@ -426,7 +426,7 @@ The black line is the mean age, and the shaded area is the approximate \Sexpr{ci
 \label{figProportionAged}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{WtLenAge.pdf}
 \caption{Time series of weight-at-age in grams (g; panel a) and length-at-age in milimetres (mm; panel b) for age-\Sexpr{ageShow} (circles) and \Sexpr{nRoll}-year running mean weight- and length-at-age (lines) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
@@ -438,7 +438,7 @@ Missing weight- and length-at-age values (i.e., years with no biological samples
 \end{figure}
 
 \iftoggle{weightGroup}{
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{WeightAgeGroup.pdf}
 \caption{Weight-at-age in grams (g) of \fishName{} in the \regionName{} \regionType{} stock assessment region (SAR) by Group from the most recent decade (\Sexpr{wtAgeYrRanges$recent}), and the previous decade (\Sexpr{wtAgeYrRanges$previous}). 
@@ -454,7 +454,7 @@ Sample sizes are given in \autoref{tabWeightAgeGroupN}.
 
 \iftoggle{spawnByLoc}{
 \iftoggle{spawnByLocXY}{
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnByLoc.pdf}
 \caption{\fishName{} spawn survey location\Sexpr{ifelse(nrow(spawnByLoc)>1, "s", "")}, and spawn index in metric tonnes (t) in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
@@ -466,7 +466,7 @@ Units: kilometres (km).}
 }{}
 }{\unskip}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnDecade.pdf}
 \caption{\fishName{} spawn survey location\Sexpr{ifelse(nrow(spawnByLoc)>1, "s", "")}, mean spawn index in metric tonnes (t), and spawn frequency from \Sexpr{unique(spawnDecade$Decade)} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
@@ -477,7 +477,7 @@ Units: kilometres (km).}
 \label{figSpawnDecade}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnTiming.pdf}
 \caption{\fishName{} spawn start date by decade and \Sexpr{ifelse(spawnTimingGroup, "Group", "Statistical Area")}.
@@ -487,29 +487,29 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \label{figSpawnTiming}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnIndexType.pdf}
-\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) by type for \fishName{} from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) by type for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 %\trendLine{}
 \spawnTypes{}
 \qPeriods{}}
 \label{figSpawnIndexType}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnDimensions.pdf}
-\caption{Time series of total spawn length in thousands of metres ($\text{m} \times 10^{3}$; panel a), mean spawn width in metres (b), and mean number of egg layers (c) for \fishName{} from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of total spawn length in thousands of metres ($\text{m} \times 10^{3}$; panel a), mean spawn width in metres (b), and mean number of egg layers (c) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 %\trendLine{}
 \qPeriods{}}
 \label{figSpawnDimensions}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnIndexPercent.pdf}
-\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) for \fishName{} from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; panel a), as well as percent contributed by \Sexpr{spawnIndexGroupName$b}, and Section (b, \& c, respectively). 
+\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; panel a), as well as percent contributed by \Sexpr{spawnIndexGroupName$b}, and Section (b, \& c, respectively). 
 %\trendLine{}
 \qPeriods{}
 \spawnIndex{}
@@ -517,10 +517,10 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \label{figSpawnIndexPercent}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnIndexChange.pdf}
-\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) for \fishName{} from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; panel a), and percent change (b).
+\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) for \fishName{} from\Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; panel a), and percent change (b).
 We calculate percent change as $\delta_t=\frac{I_t - I_{t-1}}{I_{t-1}}$ where $\mli{I}_t$ is the spawn index in year $t$.
 %\trendLine{}
 \qPeriods{}
@@ -529,7 +529,7 @@ We calculate percent change as $\delta_t=\frac{I_t - I_{t-1}}{I_{t-1}}$ where $\
 \end{figure}
 
 \iftoggle{spawnDepth}{
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnDepthSASec.pdf}
 \caption{Time series of maximum spawn depth in metres (m) for \fishName{} from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR) by Statistical Area (SA; panel a), and Section (b).
@@ -539,29 +539,29 @@ Note that depth is not corrected to the chart datum.
 \end{figure}
 }{\unskip}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnPercentPanel.pdf}
-\caption{Time series of percent of spawn index by Section for \fishName{} from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of percent of spawn index by Section for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \darkThisYr{}
 \qPeriods{}
 \spawnIndex{}}
 \label{figSpawnPercentPanel}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnPercentGrid.pdf}
-\caption{Time series of percent of spawn index by \Sexpr{spawnIndexGroupName$b} and Section for \fishName{} from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of percent of spawn index by \Sexpr{spawnIndexGroupName$b} and Section for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \qPeriods{}
 \spawnIndex{}
 \Sexpr{spawnIndexGroupLegend}}
 \label{figSpawnPercentGrid}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
-\animategraphics[width=\linewidth]{1}{\Sexpr{rPath}SpawnIndexAnimation}{}{}
+\animategraphics[width=\linewidth]{1}{\Sexpr{rPath}SpawnIndexAnimation}{1}{}
 \caption{Animation of \fishName{} spawn survey locations and spawn index in metric tonnes (t) from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
 \qPeriods{}
 \spawnIndex{}
