--- a/RegionalText/2019/PRD/DataCollectionPrograms.tex
+++ b/RegionalText/2019/PRD/DataCollectionPrograms.tex
@@ -1,6 +1,6 @@
 In 2019, biological samples were collected by two seine test vessels:
 \begin{itemize}
-\item The ``Nita Maria'' collected samples in Big Bay for 13 days from March \nth{16} to March \nth{28}.
+\item The ``Nita Maria'' collected samples in Big Bay for 13 days from March \nth{16} to March \nth{28}, and
 \item The ``Franciscan No.1'' collected samples in Kitkatla for 13 days from March \nth{15} to March \nth{29}.
 \end{itemize}
 The primary purpose of the test charter vessels was to collect biological samples from main bodies of herring from Big Bay and Kitkatla, identified from soundings.
