--- a/RegionalText/2019/CC/GeneralObservations.tex
+++ b/RegionalText/2019/CC/GeneralObservations.tex
@@ -1,10 +1,11 @@
 \begin{itemize}
 \item The test boat encountered many small fish which appear to be predominantly 2 and 3 years old.
-\item The test boat caught a set that was exclussivelt juvenile fish near Cockle Bay.
+\item The test boat caught a set that was exclusively juvenile fish near Cockle Bay.
 \item Spawns seemed to start quickly; no schooling or holding observed.
-\item Most major spawn locations finished by end of March; only a few isolated spawns reported in April.
+\item Most major spawn locations finished by end of March; only a few isolated spawns were reported in April.
 \item Spawning biomass appeared to be stronger than last year, with some spawns in areas that had no spawn last year.
 \item Compared to last year, spawning was extensive (i.e., over a longer time period and area).
-\item Kynoch Inlet and Culpepper Lagoon saw extensive spawning this season, however, no spawns were reported in Kwakhume Inlet.
-\item The number of sea lions and squid increased since last year.
+\item Kynoch Inlet and Culpepper Lagoon saw extensive spawning this season.
+\item No spawns were reported in Kwakhume Inlet this season.
+\item Compared to last year, the number of sea lions and squid increased.
 \end{itemize}
