Revise general observations

--- a/RegionalText/2019/PRD/GeneralObservations.tex
+++ b/RegionalText/2019/PRD/GeneralObservations.tex
@@ -1,23 +1,21 @@
 \begin{itemize}
-\item With the cooling temperatures herring appear to be settling back to traditional holding patterns and spawn timing. 
-\item Hatch out time outside of Tree Bluff (10 days) was recorded to be shorter in comparison to Kitkatla timing. 
-\item Herring were observed to be smaller overall during sampling, and gradually increasing in size in the Duncan bay/Tugwell Island area. 
-\item Overall length of spawn was longer than previous years and was continuous compared to the spot spawning observed in 2018. 
-\item The spawn was less intense compared to previous years.
-\item Spawn was recorded at the North end of Porcher Island and Hudson's Bay Passage south of Dundas Island.
-\item Nothing observed in Butler's Cove. 
-\item Spawn was observed in Venn Passage outside of Metlakatla. 
-\item The egg hatch out time was back to normal (2 to 3 weeks), as opposed to 10 days seen with warmer sea surface temperatures.
-\item The sea lion population seems to have increased compared to the past few years.
-\item Large extensive spawn throughout Kitkatla with spawns out around Cape George and Oona River.
-\item Sea surface temperatures at Kitkatla were $\sim9^\circ\text{C}$.
-\item Herring appeared to be holding in the typical pattern in the Big Bay area with moderate spawn. 
-\item Herring spawn was concentrated around Dries Inlet in Kitkatla Inlet, and occurred continuously for over a week. 
-\item A significant spawn event occurred on the outside of Kitkatla Inlet outside of Freeman Pass From Cape George to Joachim Point. 
-\item Reports of moderate spawn at Banks Island and Willis Bay prior to the test fishery. 
-\item Spawn occurred within similar timing windows in both Big Bay and Kitkatla. 
-\item The egg hatch out time was relatively normal (2 to 3 weeks), although Big Bay hatch out occurred on a slightly earlier time frame (2 weeks) as opposed Kitkatla (3 weeks).
-\item Soundings and observed spawn indicate a larger than usual body of fish in Kitkatla Inlet. 
-\item Test sets in Kitkatla indicated that a first wave of fish were present at the beginning of the test charter; a second wave of fish appeared to be moving in at the end of the test charter operations, with a mix of juveniles and spawned out fish appearing in the sets. 
-% \item Increase of spawn length compared to previous years.
+\item Sea surface temperatures were $\sim9^\circ\text{C}$ at Kitkatla, and $\sim6^\circ\text{C}$ degrees in Big Bay.
+With the cooling temperatures, herring appear to be settling back to traditional holding patterns and spawn timing.
+\item Soundings and observed spawns indicated more fish than usual in Kitkatla Inlet. 
+\item Increase in overall length of spawn compared to previous years.
+\item Spawning occurred around the same time in Big Bay and Kitkatla.
+\item Compared to last year, spawning was generally more continuous rather than spot spawns.
+However, spawn intensity was still weak compared to past years. 
+\item There were large extensive spawns around Dries Inlet in Kitkatla for over a week, with spawns out around Cape George and Oona River.
+Spawns were observed at the North end of Porcher Island, in Hudson's Bay Passage south of Dundas Island, and in Venn Passage outside of Metlakatla.
+A significant spawn occurred outside Kitkatla Inlet and Freeman Pass, from Cape George to Joachim Point. 
+Moderate spawns reported at Banks Island and Willis Bay prior to the test fishery.
+\item No spawn observed in Butler's Cove.
+\item Generally, the egg hatch-out time was back to normal in Kitkatla (2 to 3 weeks), as opposed to 10 days seen with warmer sea surface temperatures.
+Hatch-out time around Big Bay and outside Tree Bluff was shorter (10 days).
+\item Test sets in Kitkatla indicated that two waves of fish were encountered.
+The first wave was present at the beginning of the test charter.
+The second wave appeared to move in at the end of the test charter, with a mix of juveniles and spawned out fish.
+\item Herring were observed to be generally smaller than previous years, and gradually increased in size in the Duncan bay/Tugwell Island area.
+\item The sea lion population appeared to be increased from recent years.
 \end{itemize}
