Added Bryan's comments

--- a/RegionalText/2019/SoG/GeneralObservations.tex
+++ b/RegionalText/2019/SoG/GeneralObservations.tex
@@ -1,5 +1,10 @@
 \begin{itemize}
-\item The majority of spawn in SoG was along the West side of Denman Island this year.
-\item As in recent years, there was a lack of spawn observed in Statistical Area 17 South.
-\item Lack of spawn deposition in some common locations like Qualicum beach to Columbia beach on Vancouver Island.
+\item Overall spawn and fishery timing was about a week later in 2019 compared to recent years.
+\item The overall length of spawn observed during the flight program was less than recent years.
+\item Although mature fish were sampled in both Statistical Area 15 and Statistical Area 17 south, no spawn was reported in these areas this year.
+This is consistent with recent years.
+\item Most of the SoG spawn was between Qualicum Bay and Cape Lazo, along the West side of Denman Island.
+As with recent years, some late spawn was observed around Hornby and Denman Islands.
+\item Lack of spawn deposition in some common locations like Qualicum Beach to Columbia Beach.
+\item The SoG sea lion population during the herring season continues to grow, and is impacting the ability to obtain biological samples in some areas and times.
 \end{itemize}
