Added some observations

--- a/RegionalText/2019/SoG/GeneralObservations.tex
+++ b/RegionalText/2019/SoG/GeneralObservations.tex
@@ -1,4 +1,8 @@
 \begin{itemize}
+\item There were a few weather anomalies this year.
+February was colder than normal, while March was clear and calm, with above average temperatures and a noted lack of rain.
+\item Compared to recent years, most test fishery samples had smaller fish and more juveniles.
+\item Test vessels also noted warmer water temperatures than in previous years. 
 \item Overall spawn and fishery timing was about a week later in 2019 compared to recent years.
 \item The overall length of spawn observed during the flight program was less than recent years.
 \item Although mature fish were sampled in both Statistical Area 15 and Statistical Area 17 south, no spawn was reported in these areas this year.
